force-app/main/default/objects/Account/fields/Account_expected_amount__c.field-meta.xml
<CustomField>
    <fullName>Account_expected_amount__c</fullName>
    <description>Expected annual revenue target for the account. This field represents the projected revenue amount assigned to this account for forecasting and reporting purposes.</description>
    <label>Account_expected_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>