force-app/main/default/objects/Account/fields/billing_contact__c.field-meta.xml
<CustomField>
    <fullName>billing_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>billing contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (billing contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>