force-app/main/default/objects/Account/fields/custromer_Id__c.field-meta.xml
<CustomField>
    <fullName>custromer_Id__c</fullName>
    <label>custromer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>