force-app/main/default/objects/Account/fields/dummy__c.field-meta.xml
<CustomField>
    <fullName>dummy__c</fullName>
    <label>dummy</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>