force-app/main/default/objects/Account/fields/externalID__c.field-meta.xml
<CustomField>
    <fullName>externalID__c</fullName>
    <externalId>true</externalId>
    <label>externalID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>