force-app/main/default/objects/Account/fields/primary_contact__c.field-meta.xml
<CustomField>
    <fullName>primary_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>primary contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>