force-app/main/default/objects/Account/recordTypes/Clienttest.recordType-meta.xml
<RecordType>
    <fullName>Clienttest</fullName>
    <active>true</active>
    <label>Clienttest</label>
</RecordType>