force-app/main/default/objects/Account/recordTypes/Competitor.recordType-meta.xml
<RecordType>
    <fullName>Competitor</fullName>
    <active>true</active>
    <label>Competitor</label>
</RecordType>