force-app/main/default/objects/Account/recordTypes/corporate.recordType-meta.xml
<RecordType>
    <fullName>corporate</fullName>
    <active>false</active>
    <label>corporate</label>
</RecordType>